Switch to Java Version 15 openJDK