@@ -17,26 +17,18 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<!-- <source>1.8</source> -->
+					<release>15</release>
+					<compilerArgs>
+						--enable-preview
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 	
-	<distributionManagement>
-		<repository>
-			<id>internal</id>
-			<url>http://gstvmarchiva.gustini.local:8080/repository/internal/</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<url>http://gstvmarchiva.gustini.local:8080/repository/snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
-	
-	 
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -44,29 +36,29 @@
 			<version>4.13.1</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<scope>system</scope>
 			<groupId>com.extendedsystems.jdbc.advantage</groupId>
 			<artifactId>adsjdbc</artifactId>
 			<version>11.0</version>
 			<systemPath>${basedir}\src\lib\adsjdbc11.0.jar</systemPath>
-		</dependency>
-	<!-- 	<dependency>
+		</dependency> -->
+		
+<!-- 		<dependency>
 			<scope>system</scope>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>sqljdbc4</artifactId>
 			<version>4.0</version>
 			<systemPath>${basedir}\src\lib\microsoft\sqlserver\sqljdbc4\4.0\sqljdbc4-4.0.jar</systemPath>
-		</dependency>
-	 -->	
-		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc4 -->
+		</dependency> -->
+<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
 <dependency>
     <groupId>com.microsoft.sqlserver</groupId>
-    <artifactId>sqljdbc4</artifactId>
-    <version>4.0</version>
+    <artifactId>mssql-jdbc</artifactId>
+    <version>9.1.0.jre15-preview</version>
 </dependency>
-		
-		
+
+
 		<!-- UPDATE 20.09.2018 Update nach Fehler in ServerTimeZone -> Fallback 
 			zu alter Version https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
@@ -74,32 +66,39 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.16</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 			<version>2.6.1</version>
 		</dependency>
-		   <dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-api</artifactId>
-       <version>1.7.5</version>
-   </dependency>
-   <dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-log4j12</artifactId>
-       <version>1.7.5</version>
-   </dependency>
-   <dependency>
-   	<groupId>rentasad</groupId>
-   	<artifactId>rentasad.library.basicTools</artifactId>
-   	<version>1.0.0</version>
-   </dependency>
-   <dependency>
-   	<groupId>rentasad</groupId>
-   	<artifactId>rentasad.library.configFileTool</artifactId>
-   	<version>1.0.0</version>
-   </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>rentasad</groupId>
+			<artifactId>rentasad.library.basicTools</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>rentasad</groupId>
+			<artifactId>rentasad.library.configFileTool</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.extendedsystems.jdbc.advantage</groupId>
+			<artifactId>adsjdbc</artifactId>
+			<version>12.0</version>
+		</dependency>
 	</dependencies>
-	<version>1.0.0</version>
+
 	<groupId>rentasad</groupId>
+	<version>1.0.0</version>
 </project>
